# corpus-builder

./: .gitignore  README.md  SPEC.md  corpus_builder.toml  pyproject.toml  test_run.toml
corpus_builder/: cli.py  config.py  evaluate.py  orchestrator.py  rate_limiter.py  state.py
corpus_builder/extract/: cobol_filter.py  dialect.py  format_detector.py  hasher.py  normalizer.py
corpus_builder/sources/: base.py  github.py  registry.py  software_heritage.py
corpus_builder/vcs/: git_tools.py
docs/: c_to_rust_market_assessment.md  c_to_rust_modernization.md  darpa_tractor_deep_dive.md  foia_request_template.md  ims_hierarchical_database.md  java_migration_business_case.md
tests/: test_dialect.py  test_discover.py  test_evaluate.py  test_filter.py  test_format_detector.py  test_github_adapter.py  test_hasher.py  test_normalizer.py  test_pipeline.py  test_rate_limiter.py  test_state.py
tests/fixtures/: github_search_page1.json  sample_cics.cbl  sample_cobol.cbl
