[project]
name = "corpus-builder"
version = "0.1.0"
description = "Build a deduplicated COBOL corpus from public repositories"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "duckdb>=1.0",
    "typer>=0.12",
    "pyarrow>=15.0",
]

[project.scripts]
corpus-builder = "corpus_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
